--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,16 @@ dev = [
     "pytest>=8.3.4",
     "ruff>=0.9.2",
 ]
+
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build]
+exclude = [
+  "/.*",
+  "/tests",
+    "README.md",
+
+]
